--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -9,14 +9,14 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <tableCellView identifier="{CGPoint=dd}" id="GbV-qK-Vp4">
-            <rect key="frame" x="0.0" y="0.0" width="172" height="65"/>
+            <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="uEH-hB-kyH" userLabel="position">
-                    <rect key="frame" x="0.0" y="0.0" width="172" height="65"/>
+                    <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
                     <subviews>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="jzj-QV-oE2" userLabel="X" customClass="StepperTextField">
-                            <rect key="frame" x="0.0" y="46" width="86" height="19"/>
+                            <rect key="frame" x="0.0" y="11" width="86" height="19"/>
                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="X" bezelStyle="round" id="TVF-ca-BP1">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -34,7 +34,7 @@
                             </connections>
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ut6-h1-1dS" userLabel="Y" customClass="StepperTextField">
-                            <rect key="frame" x="86" y="46" width="86" height="19"/>
+                            <rect key="frame" x="86" y="11" width="86" height="19"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Y" bezelStyle="round" id="ZnM-vW-FvB">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -51,13 +51,33 @@
                                 <binding destination="GbV-qK-Vp4" name="value" keyPath="objectValue.y" id="ZYv-fa-C9S"/>
                             </connections>
                         </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pEa-Ah-cwv">
+                            <rect key="frame" x="35" y="-1" width="16" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="X" id="Gyx-WL-Cwq">
+                                <font key="font" metaFont="smallSystem"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B8J-Qm-Hmk">
+                            <rect key="frame" x="121" y="-1" width="16" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Y" id="CvK-Al-wlF">
+                                <font key="font" metaFont="smallSystem"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Ut6-h1-1dS" secondAttribute="width" multiplier="2:1" id="1TV-Y2-sWS"/>
+                        <constraint firstItem="B8J-Qm-Hmk" firstAttribute="top" secondItem="Ut6-h1-1dS" secondAttribute="bottom" constant="-2" id="28w-rt-htk"/>
                         <constraint firstItem="jzj-QV-oE2" firstAttribute="leading" secondItem="uEH-hB-kyH" secondAttribute="leading" id="3Yt-WI-gC5"/>
                         <constraint firstAttribute="trailing" secondItem="Ut6-h1-1dS" secondAttribute="trailing" id="abb-CN-B63"/>
+                        <constraint firstItem="pEa-Ah-cwv" firstAttribute="centerX" secondItem="jzj-QV-oE2" secondAttribute="centerX" id="bex-iK-qNz"/>
                         <constraint firstItem="Ut6-h1-1dS" firstAttribute="top" secondItem="uEH-hB-kyH" secondAttribute="top" id="hNb-IM-Tya"/>
+                        <constraint firstItem="pEa-Ah-cwv" firstAttribute="top" secondItem="jzj-QV-oE2" secondAttribute="bottom" constant="-2" id="ltU-dR-uEu"/>
                         <constraint firstItem="jzj-QV-oE2" firstAttribute="top" secondItem="uEH-hB-kyH" secondAttribute="top" id="o3V-Kt-coO"/>
+                        <constraint firstItem="B8J-Qm-Hmk" firstAttribute="centerX" secondItem="Ut6-h1-1dS" secondAttribute="centerX" id="ogv-mI-etZ"/>
                         <constraint firstAttribute="width" secondItem="jzj-QV-oE2" secondAttribute="width" multiplier="2:1" id="ugj-4s-2O6"/>
                     </constraints>
                 </customView>
@@ -71,7 +91,7 @@
             <connections>
                 <outlet property="textField" destination="jzj-QV-oE2" id="MVN-XN-UTj"/>
             </connections>
-            <point key="canvasLocation" x="445" y="524.5"/>
+            <point key="canvasLocation" x="445" y="508.5"/>
         </tableCellView>
         <tableCellView identifier="degrees" id="a63-cn-NOW">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
